# icu-cmake

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
cmake/: BuildICU.cmake  ByproductsICU.cmake  PrebuiltICU.cmake
patches/: 0010-fix-pkgdata-suffix.patch  0023-remove-soname-version.patch
scripts/: commit_result.sh  upload_result.sh
